--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13.1"
 dependencies = [
     "argparse>=1.4.0",
+    "matplotlib>=3.10.0",
     "statistics>=1.0.3.5",
     "tqdm>=4.67.1",
     "vapoursynth>=70",
