--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.13.1"
 dependencies = [
     "argparse>=1.4.0",
     "matplotlib>=3.10.0",
+    "numpy>=2.2.2",
+    "scipy>=1.15.1",
     "statistics>=1.0.3.5",
     "tqdm>=4.67.1",
     "vapoursynth>=70",
