Squashed commit of the following:     specify entrypoint for docker for better usability     updated readme     added dockerfile (AMD support); pyproject installable scripts configured

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,18 @@ dependencies = [
     "vapoursynth>=70",
     "vstools>=3.3.4",
 ]
+
+[build-system]
+requires = ["setuptools >= 77.0.3"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+# specify root package dir
+package-dir = { "" = "scripts" }
+
+
+[project.scripts]
+stats = "stats:main"
+plot = "plot:main"
+scores = "scores:main"
+encode = "encode:main"
